# tmnt_magic_bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
lib/: constants.py  magicdict.txt  words.py
