[tool.poetry]
name = "tmnt_magic_bot"
version = "0.1.0"
description = ""
authors = ["Max Dymond <cmeister2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
num2words = "^0.5.10"
pronouncing = "^0.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
